WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
24798
Missing #include <wx/dcgraph.h>
https://bugs.webkit.org/show_bug.cgi?id=24798
Summary
Missing #include <wx/dcgraph.h>
Sven Kurzeder
Reported
2009-03-25 03:15:32 PDT
In the file \WebCore\platform\wx\wxcode\win\non-kerned-drawing.cpp the following include is missing: #include <wx/dcgraph.h> This leads to an undeclared wxGraphicsContext*.
Attachments
Add attachment
proposed patch, testcase, etc.
Kevin Ollivier
Comment 1
2009-05-05 16:16:35 PDT
Landed in
r43261
, thanks!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug